apps/django-app/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: django
          image: registry.melekabderrahmane.com/easytp-backend:20260517-110656-a034ab5 # {"$imagepolicy": "flux-system:easytp-backend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared-data
              mountPath: /app/staticfiles
              subPath: staticfiles
            - name: shared-data
              mountPath: /app/media
              subPath: media
            - name: shared-data
              mountPath: /READONLY
              subPath: READONLY
            - name: shared-data
              mountPath: /USERDATA
              subPath: USERDATA
          livenessProbe:
            httpGet:
              path: /
              port: 8000
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8000
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 16
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "800Mi"
              cpu: "800m"
      volumes:
        - name: shared-data
          hostPath:
            path: /opt/django-shared
            type: DirectoryOrCreate
      serviceAccountName: django-account
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-app
spec:
  selector:
    app: django-app
  ports:
  - port: 8000
    targetPort: 8000
